--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,10 @@
     "px-tooltip": "#~0.9.0",
     "px-spacing-design": "#~0.3.7",
     "px-polymer-font-awesome": "^0.1.8",
-    "iron-dropdown": "PolymerElements/iron-dropdown#~1.3.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1"
+    "iron-dropdown": "PolymerElements/iron-dropdown#2.0-preview",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1",
+    "iron-icon": "PolymerElements/iron-icon#2.0-preview",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview"
   },
   "devDependencies": {
     "px-starter-kit-design": "^0.6.0",
@@ -44,6 +46,17 @@
   },
   "resolutions": {
     "webcomponentsjs": "v1",
-    "polymer": "2.0-preview"
+    "polymer": "2.0-preview",
+    "iron-flex-layout": "2.0-preview",
+    "iron-iconset-svg": "2.0-preview",
+    "iron-meta": "2.0-preview",
+    "iron-dropdown": "2.0-preview",
+    "iron-behaviors": "2.0-preview",
+    "iron-overlay-behavior": "2.0-preview",
+    "iron-fit-behavior": "2.0-preview",
+    "iron-resizable-behavior": "2.0-preview",
+    "neon-animation": "2.0-preview",
+    "iron-selector": "2.0-preview",
+    "iron-a11y-keys-behavior": "2.0-preview"
   }
 }
